# exasol-python-test-framework

./: .gitattributes  .gitignore  .workflow-patcher.yml  README.md  README.rst  SECURITY.md  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml  run_all_tests.sh  setup.py
.github/: pull_request_template.md
.github/actions/prepare_poetry_env/: action.yml
.github/workflows/: cd.yml  check_setup_py.yaml  check_version.yaml  checks.yml  fast-tests.yml  main.yml  release.yml  release_droid_prepare_original_checksum.yml  release_droid_upload_github_release_assets.yml  slow-checks.yml
.github/workflows/scripts/: download_exaplus.sh  download_odbc_driver.sh
doc/: changes_0.6.0.md
doc/changes/: changelog.md  changes_0.1.0.md  changes_0.2.0.md  changes_0.3.0.md  changes_0.4.0.md  changes_0.5.0..md  changes_0.5.0.md  changes_0.5.1.md  changes_0.6.0.md  changes_0.6.1.md  changes_0.7.0.md  unreleased.md
exasol_python_test_framework/: __init__.py
exasol_python_test_framework/docker_db_environment/: __init__.py
exasol_python_test_framework/environment_info/: __init__.py
exasol_python_test_framework/exatest/: __init__.py  testcase.py  threading.py  utils.py
exasol_python_test_framework/exatest/clients/: client_setup.py  odbc.py
exasol_python_test_framework/exatest/servers/: __init__.py  __main__.py  ftp.py  smtp.py
exasol_python_test_framework/exatest/test/: __init__.py
exasol_python_test_framework/performance/: __init__.py
exasol_python_test_framework/udf/: __init__.py  available_python_packages_utils.py  udf_debug.py
exatest/: __init__.py
exatest/clients/: odbc.py
exatest/servers/: __init__.py  ftpserver.py
githooks/: install.sh  pre-commit  update_packaging.sh
scripts/test/: run_all_tests.sh  run_locally.sh
test/unit/: smoke_test.py
tests/: run_locally.sh
tests/docker_db_environment/: docker_environment_test.py
tests/environment_info/: environment_info.py
tests/exatest/: dbtestcase.py  expectations.py  ftp_server.py  http_server.py  parameterized.py  servers.py  smtp_server.py  utils.py
tests/udf/: available_python_packages_utils_test.py  tutorial.py  udf_debug.py
tests/udf/lang/foo/: tst.sql
tests/udf/lang/to_fail/: fail.sql
udf/: __init__.py
