[project]
name = "exasol-python-test-framework"
version = "0.7.0"
requires-python = ">=3.10,<3.12"
description = "Python Test framework for Exasol database tests"
authors = [
    {name="Exasol AG", email="opensource@exasol.com"}
]
readme = 'README.md'
license = "MIT"
keywords = ['exasol', 'testing']
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/exasol/exasol-python-test-framework"
homepage = "https://github.com/exasol/exasol-python-test-framework"

[tool.poetry]
requires-poetry = ">=2.1.0"
include = ["exatest","udf"]
exclude = ["lang"]

[tool.poetry.dependencies]
pyodbc = "^5.1.0"
numpy = ">=1.26"
scipy = "^1.13.0"
# The `sys_platform` marker makes sure the docker dependency is only installed on
# non windows platforms.
docker = { version = ">=5.0.3", markers = "sys_platform != 'win32'"}
pyftpdlib = ">=1.5.6"

[tool.poetry.group.dev.dependencies]
exasol-integration-test-docker-environment = "^3.0.0"
toml = ">=0.10.2"
gitpython = ">=3.1.0"


